# mojo-standalone

./: .gclient  .gitignore  .vpython3  BUILD.gn  DEPS  GOOGLE_VERSION  README.md  README_EN.md  chromium_git_revision
base/test/: BUILD.gn  test_suite.cc
codelabs/mojo_examples/: BUILD.gn
codelabs/mojo_examples/mojom/: BUILD.gn
mojo/: BUILD.gn
mojo/core/: BUILD.gn
mojo/public/cpp/bindings/: BUILD.gn
mojo/public/cpp/bindings/tests/: BUILD.gn  data_view_unittest.cc  struct_unittest.cc
mojo/public/cpp/platform/: BUILD.gn  named_platform_channel_posix.cc
mojo/public/interfaces/bindings/tests/: BUILD.gn  test_data_view.test-mojom  test_native_types.test-mojom  test_structs.test-mojom
mojo/public/js/: BUILD.gn
mojo/public/tools/bindings/: mojom.gni
patches/: 0001-mojo-Remove-external-dependencies-crypto-IPC.patch  0002-mojo-Remove-service_manager-and-IPC-test-dependencie.patch  0003-mojo-Remove-JS-TS-bindings-test-dependency.patch  0004-mojo-Remove-Blink-dependencies.patch  0005-mojo-Remove-IPC-dependencies-from-test-interfaces.patch  0006-mojo-Remove-NativeStruct-and-IPC-dependencies.patch  0007-build-Remove-unnecessary-build-targets-for-Mojo-depe.patch
